--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,46 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8b67fd">  <td>20/10/14 21:40:37</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;LogoutValidation.initialize()[pri:0, instance:testCases.LogoutValidation@3b088d51]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1538399081</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>20/10/14 21:40:41</td>   <td>3886</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogoutValidation.logoutValidation()[pri:0, instance:testCases.LogoutValidation@3b088d51]">logoutValidation</td> 
-  <td>main@1538399081</td>   <td></td> </tr>
-<tr bgcolor="8b67fd">  <td>20/10/14 21:40:46</td>   <td>8891</td> <td>&nbsp;</td><td title="&lt;&lt;LogoutValidation.teardown()[pri:0, instance:testCases.LogoutValidation@3b088d51]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1538399081</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:58:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginValidation.initialize()[pri:0, instance:testCases.LoginValidation@30a3107a]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:58:30</td>   <td>3931</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginValidation.usernameValidations(java.lang.String, java.lang.String)[pri:0, instance:testCases.LoginValidation@30a3107a]">usernameValidations</td> 
+  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:58:32</td>   <td>5696</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginValidation.teardown()[pri:0, instance:testCases.LoginValidation@30a3107a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:58:36</td>   <td>10113</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginValidation.initialize()[pri:0, instance:testCases.LoginValidation@30a3107a]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:58:40</td>   <td>13835</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginValidation.usernameValidations(java.lang.String, java.lang.String)[pri:0, instance:testCases.LoginValidation@30a3107a]">usernameValidations</td> 
+  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:58:41</td>   <td>14885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginValidation.teardown()[pri:0, instance:testCases.LoginValidation@30a3107a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:58:45</td>   <td>19299</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginValidation.initialize()[pri:0, instance:testCases.LoginValidation@30a3107a]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:58:48</td>   <td>22415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginValidation.usernameValidations(java.lang.String, java.lang.String)[pri:0, instance:testCases.LoginValidation@30a3107a]">usernameValidations</td> 
+  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:58:49</td>   <td>23399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginValidation.teardown()[pri:0, instance:testCases.LoginValidation@30a3107a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:58:54</td>   <td>27816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginValidation.initialize()[pri:0, instance:testCases.LoginValidation@30a3107a]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:58:57</td>   <td>30964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginValidation.usernameValidations(java.lang.String, java.lang.String)[pri:0, instance:testCases.LoginValidation@30a3107a]">usernameValidations</td> 
+  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:58:58</td>   <td>31943</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginValidation.teardown()[pri:0, instance:testCases.LoginValidation@30a3107a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:59:02</td>   <td>36363</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginValidation.initialize()[pri:0, instance:testCases.LoginValidation@30a3107a]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:59:06</td>   <td>39714</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginValidation.usernameValidations(java.lang.String, java.lang.String)[pri:0, instance:testCases.LoginValidation@30a3107a]">usernameValidations</td> 
+  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:59:06</td>   <td>40424</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginValidation.teardown()[pri:0, instance:testCases.LoginValidation@30a3107a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:59:06</td>   <td>40519</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginValidation.initialize()[pri:0, instance:testCases.LoginValidation@30a3107a]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:59:10</td>   <td>43669</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginValidation.usernameValidations(java.lang.String, java.lang.String)[pri:0, instance:testCases.LoginValidation@30a3107a]">usernameValidations</td> 
+  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:59:10</td>   <td>44496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginValidation.teardown()[pri:0, instance:testCases.LoginValidation@30a3107a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:59:10</td>   <td>44621</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginValidation.initialize()[pri:0, instance:testCases.LoginValidation@30a3107a]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td>  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:59:14</td>   <td>47809</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginValidation.usernameValidations(java.lang.String, java.lang.String)[pri:0, instance:testCases.LoginValidation@30a3107a]">usernameValidations</td> 
+  <td>main@603856241</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/10/15 08:59:15</td>   <td>48997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginValidation.teardown()[pri:0, instance:testCases.LoginValidation@30a3107a]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@603856241</td>   <td></td> </tr>
 </table>
